# sip-codec

./: Cargo.toml  README.md
src/: codec.rs  headers.rs  lib.rs  parser.rs  request.rs  response.rs
src/headers/: allow.rs  content_length.rs  max_forwards.rs  user_agent.rs
src/parser/: header.rs
